--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -21,7 +21,8 @@
         The specified category does not exist.
       {% endif %}
       <br>
-      <a href="rango/index">Index</a>
+      <a href="rango/index">Index</a><br>
+      <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a> <br/>
     </div>
   </body>
 </html>
