--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Rango</title>
-  </head>
-  <body>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+<title>
+  {% block title_block %}
+    Add a Category
+  {% endblock %}
+</title>
+
+{% block body_block %}
     <h1>Add a Category</h1>
     <div>
-      <form id="category_form" method="post" action="/rango/add_category/">
+      <form id="category_form" method="post" action="{% url 'rango:add_category' %}">
         {% csrf_token %}
         {% for hidden in form.hidden_fields %}
           {{ hidden }}
@@ -18,6 +23,4 @@
         {% endfor %}
         <input type="submit" name="submit" value="Create Category" />
       </form>
-    </div>
-  </body>
-</html>
+{% endblock %}
