--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
-  <head>
-    <title>Rango</title>
-  </head>
+<title>
+  {% block title_block %}
+    Homepage
+  {% endblock %}
 
-  <body>
+{% block body_block%}
     <h1> Rango says...</h1>
     <div>
       hey there partner! <br />
@@ -21,7 +22,9 @@
         {% for category in categories %}
         <li>
       <!-- The following line is changed to add an HTML hyperlink -->
-          <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+      <a href="{% url 'rango:show_category' category.slug %}">
+        {{ category.name }}
+      </a>
         </li>
         {% endfor %}
       </ul>
@@ -38,19 +41,12 @@
         {% for page in most_viewed_pages %}
         <li>
       <!-- The following line is changed to add an HTML hyperlink -->
-          <a href="/rango/page/{{ page }}/">{{ page.title }}</a>
+          <a href="{{ page.url }}">{{ page.title }}</a>
         </li>
         {% endfor %}
       </ul>
     {% else %}
       <strong>There are no pages present.</strong>
     {% endif %}
-</div>
-    <div>
-      <a href="/rango/about/">About</a><br />
-      <a href="/rango/add_category/">Add a New Category</a><br/>
-      <img src = "{% static 'images/rango.jpg' %}" alt = "Picture of Rango"/>
-    </div>
-  </body>
-
-</html>
+    <img src = "{% static 'images/rango.jpg' %}" alt = "Picture of Rango"/>
+{% endblock %}
