--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -9,6 +9,7 @@
 </title>
 
 {% block body_block %}
+  {% if user.is_authenticated %}
     <h1>Add a Category</h1>
     <div>
       <form id="category_form" method="post" action="{% url 'rango:add_category' %}">
@@ -23,4 +24,8 @@
         {% endfor %}
         <input type="submit" name="submit" value="Create Category" />
       </form>
+    {% else %}
+      You must <a href="{% url 'rango:login' %}">login</a> to add a new category.
+    {% endif %}
+
 {% endblock %}
