--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -6,19 +6,23 @@
 </title>
 
 {% block body_block %}
-  <h1>Add a Page</h1>
-  <div>
-    <form id="page_form" method="post" action="{% url 'rango:add_page' category.slug %}">
+  {% if user.is_authenticated %}
+    <h1>Add a Page</h1>
+    <div>
+      <form id="page_form" method="post" action="{% url 'rango:add_page' category.slug %}">
 
-      {% csrf_token %}
-      {% for hidden in form.hidden_fields %}
-        {{ hidden }}
-      {% endfor %}
-      {% for field in form.visible_fields %}
-        {{ field.errors }}
-        {{ field.help_text }}
-        {{ field }}
-      {% endfor %}
-      <input type="submit" name="submit" value="Create Page" />
-    </form>
+        {% csrf_token %}
+        {% for hidden in form.hidden_fields %}
+          {{ hidden }}
+        {% endfor %}
+        {% for field in form.visible_fields %}
+          {{ field.errors }}
+          {{ field.help_text }}
+          {{ field }}
+        {% endfor %}
+        <input type="submit" name="submit" value="Create Page" />
+      </form>
+  {% else %}
+    You must <a href="{% url 'rango:login' %}">login</a> to add a new page.
+  {% endif %}
 {% endblock %}
