--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <h2>
-      <strong> {{categories_title}}</strong>
+      <strong> Most Liked Categories</strong>
     </h2>
     {% if categories %}
       <ul>
@@ -38,7 +38,7 @@
     {% endif %}
 
     <h2>
-      <strong> {{pages_title}}</strong>
+      <strong> Most Viewed Pages</strong>
     </h2>
 
     {% if most_viewed_pages %}
