--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -17,4 +17,5 @@
       <img src = "{% static 'images/rango.jpg' %}" alt = "Picture of Rango"/>
       <img src = "{{ MEDIA_URL}}cat.jpg " alt = "Picture of a Cat"/>
     </div>
+    There have been {{visits}} visits to this site.
 {% endblock %}
