--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% extends 'rango/base.html' %}
+{% extends 'ClubScoutGlasgow/base.html' %}
 {% load staticfiles %}
 
 <title>
@@ -27,7 +27,7 @@
         {% for category in categories %}
         <li>
       <!-- The following line is changed to add an HTML hyperlink -->
-      <a href="{% url 'rango:show_category' category.slug %}">
+
         {{ category.name }}
       </a>
         </li>
@@ -41,17 +41,9 @@
       <strong> Most Viewed Pages</strong>
     </h2>
 
-    {% if most_viewed_pages %}
       <ul>
-        {% for page in most_viewed_pages %}
         <li>
       <!-- The following line is changed to add an HTML hyperlink -->
-          <a href="{{ page.url }}">{{ page.title }}</a>
         </li>
-        {% endfor %}
       </ul>
-    {% else %}
-      <strong>There are no pages present.</strong>
-    {% endif %}
-    <img src = "{% static 'images/rango.jpg' %}" alt = "Picture of Rango"/>
 {% endblock %}
